MDEV-29129: Performance regression: "select order by limit" always using temporary

(Conservative variant of the fix) (TODO: add testcase)

When adding support for ROWNUM(), the following logic was added:

if (the select list has a function with RAND_TABLE_BIT) then {
  Store select output in temporary table before sorting it;
  // This also causes all stored functions in the
  // select list to be computed before sorting (and applying LIMIT)
}

This is necessary for ROWNUM() but not for other functions.
Limit this handling to ROWNUM().