sql/sql_select.cc
@@ -434,7 +434,7 @@ void JOIN::init(THD *thd_arg, List<Item> &fields_arg,
   no_order= 0;
   simple_order= 0;
   simple_group= 0;
-  rand_table_in_field_list= 0;
+  rownum_in_field_list= 0;
   ordered_index_usage= ordered_index_void;
   need_distinct= 0;
   skip_sort_order= 0;
@@ -1270,6 +1270,18 @@ int SELECT_LEX::vers_setup_conds(THD *thd, TABLE_LIST *tables)
   DBUG_RETURN(0);
 }
 
+bool check_if_rownum_present(List<Item> *fields_list)
+{
+  List_iterator<Item> it(*fields_list);
+  Item *item;
+  while ((item= it++))
+  {
+    if (item->walk(&Item::check_rownum_func_processor,
+                   false /* do not walk into subqueries*/, NULL))
+      return true;
+  }
+  return false;
+}
 /*****************************************************************************
   Check fields, find best join, do the select and output fields.
   mysql_select assumes that all tables are already opened
@@ -1434,7 +1446,8 @@ JOIN::prepare(TABLE_LIST *tables_init, COND *conds_init, uint og_num,
                    &all_fields, &select_lex->pre_fix, 1))
     DBUG_RETURN(-1);
   thd->lex->current_select->context_analysis_place= save_place;
-  rand_table_in_field_list= select_lex->select_list_tables & RAND_TABLE_BIT;
+
+  rownum_in_field_list= check_if_rownum_present(&fields_list);
 
   if (setup_without_group(thd, ref_ptrs, tables_list,
                           select_lex->leaf_tables, fields_list,
@@ -14790,8 +14803,8 @@ remove_const(JOIN *join,ORDER *first_order, COND *cond,
              bool change_list, bool *simple_order)
 {
   /*
-    We can't do ORDER BY using filesort if the select list contains a non
-    deterministic value like RAND() or ROWNUM().
+    We can't do ORDER BY using filesort if the select list contains a
+    ROWNUM()
     For example:
     SELECT a,ROWNUM() FROM t1 ORDER BY a;
 
@@ -14807,7 +14820,7 @@ remove_const(JOIN *join,ORDER *first_order, COND *cond,
     and some wrong results so better to leave the code as it was
     related to ROLLUP.
   */
-  *simple_order= !join->rand_table_in_field_list;
+  *simple_order= !join->rownum_in_field_list;
   if (join->only_const_tables())
     return change_list ? 0 : first_order;		// No need to sort
 
