sql/sql_select.h
@@ -1424,7 +1424,7 @@ public:
     Set to 1 if any field in field list has RAND_TABLE set. For example if
     if one uses RAND() or ROWNUM() in field list
   */
-  bool rand_table_in_field_list;
+  bool rownum_in_field_list;
 
   /*
     ordered_index_usage is set if an ordered index access
